// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with minimal props 1`] = `
<div>
  <style />
  <span
    class="manor-button-wrap "
  >
    <style />
    <button
      class="
            manor-rich-text 
            md
            primary
            manor-button 
            
            center
            
          "
      id="test-id"
    >
      
    </button>
  </span>
</div>
`;

exports[`Button renders with props 1`] = `
<div>
  <style />
  <span
    class="manor-button-wrap "
  >
    <style />
    <button
      class="
            manor-rich-text 
            md
            primary
            manor-button 
            onDark
            
            align-right
          "
      disabled=""
      id="test-id"
    >
      <style />
      <div
        class="btn-icon"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check fa-w-16 "
          data-icon="check"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="font-size: 2rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      test content
    </button>
  </span>
</div>
`;
